tests/expectations/compiler/finalize/increment_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown function `increment`
    --> compiler-test:11:9
     |
  11 |         increment(amounts, addr, amount);
     |         ^^^^^^^^^
"""]
